--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display+SC&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <title>thinkingInaName</title>
 </head>
 
 <body>
-  <nav>
+  <nav class="menu">
     <ul>
       <li><a href="#animais">Animais</a></li>
       <li><a href="#faq">FAQ</a></li>
@@ -20,7 +23,7 @@
   </nav>
   <section class="grid-section animais" id="animais">
     <h1 class="titulo">Fantastic Beasts</h1>
-    <ul>
+    <ul class="animais-lista">
       <li>
         <img src="./img/imagem1.jpg" alt="">
       </li>
@@ -113,6 +116,10 @@
       <li>Salvador - BA</li>
     </ul>
   </section>
+
+  <footer class="copy">
+    <p>Todos os direitos reservados</p>
+  </footer>
 
 
   <script src="./script.js"></script>
