--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     </div>
   </section>
   <section class="grid-section faq" id="faq">
-    <h1>FAQ</h1>
-    <dl>
+    <h1 class="titulo">FAQ</h1>
+    <dl class="faq-lista">
       <dt>Qual a idade dos animais?</dt>
       <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse tenetur quo exercitationem? Id, nisi ipsa.</dd>
       <dt>Qual a idade dos animais?</dt>
@@ -105,7 +105,7 @@
   </section>
 
   <section class="grid-section contato" id="contato">
-    <h1>Contato</h1>
+    <h1 class="titulo">Contato</h1>
     <div class="mapa">
       <img src="img/mapa.png" alt="">
     </div>
