--- a/Transversing-and-manipulation/index.html
+++ b/Transversing-and-manipulation/index.html
@@ -93,8 +93,8 @@
   <section class="grid-section faq" id="faq">
     <h1 class="titulo">FAQ</h1>
     <dl class="faq-lista">
-      <dt>Qual a idade dos animais?</dt>
-      <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse tenetur quo exercitationem? Id, nisi ipsa.</dd>
+      <dt>Qual a idade dos animais1?</dt>
+      <dd>2Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse tenetur quo exercitationem? Id, nisi ipsa.</dd>
       <dt>Qual a idade dos animais?</dt>
       <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse tenetur quo exercitationem? Id, nisi ipsa.</dd>
       <dt>Qual a idade dos animais?</dt>
