Constructor functions selecting DOM

--- a/Constructor-function/index.html
+++ b/Constructor-function/index.html
@@ -16,114 +16,11 @@
 </head>
 
 <body>
-  <nav class="menu js-menu">
-    <ul>
-      <li><a href="#animais">Animais</a></li>
-      <li><a href="#faq">FAQ</a></li>
-      <li><a href="#contato">Contato</a></li>
-      <li><a href="https://github.com/CaioKenedy">Dev →</a></li>
-    </ul>
-  </nav>
-  <section class="grid-section animais js-scroll" id="animais">
-    <h1 class="titulo">Fantastic Beasts</h1>
-    <ul class="animais-lista js-tabmenu">
-      <li>
-        <img src="./img/imagem1.jpg" alt="">
-      </li>
-      <li>
-        <img src="./img/imagem2.jpg" alt="">
-      </li>
-      <li>
-        <img src="./img/imagem3.jpg" alt="">
-      </li>
-      <li>
-        <img src="./img/imagem4.jpg" alt="">
-      </li>
-      <li>
-        <img src="./img/imagem5.jpg" alt="">
-      </li>
-      <li>
-        <img src="./img/imagem6.jpg" alt="">
-      </li>
-    </ul>
-
-    <div class="animais-descricao js-tabcontent">
-      <section>
-        <h2>Raposa</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
-      </section>
-
-      <section>
-        <h2>Esquilo</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
-      </section>
-
-      <section>
-        <h2>Urso</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
-      </section>
-
-      <section>
-        <h2>Lobo</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
-      </section>
-
-      <section>
-        <h2>Macaco</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
-      </section>
-
-      <section>
-        <h2>Leão</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
-      </section>
-
-
-    </div>
-  </section>
-  <section class="grid-section faq js-scroll" id="faq">
-    <h1 class="titulo">FAQ</h1>
-    <dl class="faq-lista js-accordion">
-      <dt>Qual a idade dos animais?</dt>
-      <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse tenetur quo exercitationem? Id, nisi ipsa.</dd>
-      <dt>Qual a idade dos animais?</dt>
-      <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse tenetur quo exercitationem? Id, nisi ipsa.</dd>
-      <dt>Qual a idade dos animais?</dt>
-      <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse tenetur quo exercitationem? Id, nisi ipsa.</dd>
-      <dt>Qual a idade dos animais?</dt>
-      <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse tenetur quo exercitationem? Id, nisi ipsa.</dd>
-    </dl>
-  </section>
-
-  <section class="grid-section contato js-scroll" id="contato">
-    <h1 class="titulo">Contato</h1>
-    <div class="mapa">
-      <img src="img/mapa.png" alt="">
-    </div>
-    <ul class="dados">
-      <li>caiokenedysantos@gmail.com</li>
-      <li>+55 21 071987733811</li>
-      <li>Rua Almirante Barroso - BA </li>
-      <li>Salvador - BA</li>
-    </ul>
-  </section>
-
-  <footer class="copy">
-    <p>Todos os direitos reservados</p>
-  </footer>
-
+  <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+  </ul>
 
   <script src="../Constructor-function/script.js"></script>
 </body>
