--- a/Constructor-function/index.html
+++ b/Constructor-function/index.html
@@ -12,7 +12,7 @@
   <script>
     document.documentElement.className += " js"
   </script>
-  <title>Prototype</title>
+  <title>Constructor Functions</title>
 </head>
 
 <body>
