--- a/Function/index.html
+++ b/Function/index.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
+  <ul>
+    <li class="ativo">Item 1</li>
+    <li class="ativo">Item 2</li>
+    <li>Item 3</li>
+    <li>Item 4</li>
+  </ul>
 
 
   <script src="../Function/script.js"></script>
