--- a/DOM-EFFECTS/dataset/index.html
+++ b/DOM-EFFECTS/dataset/index.html
@@ -8,15 +8,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display+SC&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../Scroll-animation/css/style.css">
+  <link rel="stylesheet" href="../dataset/css/style.css">
   <script>
     document.documentElement.className += " js"
   </script>
-  <title>thinkingInaName</title>
+  <title>Dataset</title>
 </head>
 
 <body>
-  <nav class="menu js-menu">
+  <nav class="menu" data-menu="suave">
     <ul>
       <li><a href="#animais">Animais</a></li>
       <li><a href="#faq">FAQ</a></li>
@@ -24,9 +24,9 @@
       <li><a href="https://github.com/CaioKenedy">Dev →</a></li>
     </ul>
   </nav>
-  <section class="grid-section animais js-scroll" id="animais">
+  <section class="grid-section animais" data-anime="scroll" id="animais">
     <h1 class="titulo">Fantastic Beasts</h1>
-    <ul class="animais-lista js-tabmenu">
+    <ul class="animais-lista" data-tab="menu">
       <li>
         <img src="./img/imagem1.jpg" alt="">
       </li>
@@ -47,43 +47,43 @@
       </li>
     </ul>
 
-    <div class="animais-descricao js-tabcontent">
-      <section>
+    <div class="animais-descricao" data-tab="content">
+      <section data-anime="show-down" data-anime="show-right">
         <h2>Raposa</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
       </section>
 
-      <section>
+      <section data-anime="show-down" data-anime="show-right">
         <h2>Esquilo</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
       </section>
 
-      <section>
+      <section data-anime="show-right">
         <h2>Urso</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
       </section>
 
-      <section>
+      <section data-anime="show-right">
         <h2>Lobo</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
       </section>
 
-      <section>
+      <section data-anime="show-down">
         <h2>Macaco</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem necessitatibus beatae ut minima enim?</p>
       </section>
 
-      <section>
+      <section data-anime="show-down">
         <h2>Leão</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit sapiente doloribus doloremque ad sunt magni, neque quod ut similique asperiores sequi earum autem consequatur!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eum deleniti id maxime ipsam praesentium?</p>
@@ -93,9 +93,9 @@
 
     </div>
   </section>
-  <section class="grid-section faq js-scroll" id="faq">
+  <section class="grid-section faq" data-anime="scroll" id="faq">
     <h1 class="titulo">FAQ</h1>
-    <dl class="faq-lista js-accordion">
+    <dl class="faq-lista" data-anime="accordion">
       <dt>Qual a idade dos animais?</dt>
       <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse tenetur quo exercitationem? Id, nisi ipsa.</dd>
       <dt>Qual a idade dos animais?</dt>
@@ -107,7 +107,7 @@
     </dl>
   </section>
 
-  <section class="grid-section contato js-scroll" id="contato">
+  <section class="grid-section contato" data-anime="scroll" id="contato">
     <h1 class="titulo">Contato</h1>
     <div class="mapa">
       <img src="img/mapa.png" alt="">
@@ -124,8 +124,8 @@
     <p>Todos os direitos reservados</p>
   </footer>
 
-
-  <script src="../Scroll-animation/script.js"></script>
+  <script src="../dataset/animations.js"></script>
+  <script src="../dataset/script.js"></script>
 </body>
 
 </html>
