--- a/setTimeout-and-interval/index.html
+++ b/setTimeout-and-interval/index.html
@@ -12,11 +12,7 @@
 </head>
 
 <body>
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  </ul>
+  <button>Click</button>
 
   <script src="../setTimeout-and-interval/script.js"></script>
 </body>
