--- a/setTimeout-and-interval/index.html
+++ b/setTimeout-and-interval/index.html
@@ -12,7 +12,18 @@
 </head>
 
 <body>
-  <button>Click</button>
+  <style>
+    body {
+      background: blue;
+    }
+
+    body.active {
+      background: red;
+    }
+  </style>
+  <button class="iniciar">Iniciar</button>
+  <button class="pausar">Pausar</button>
+  <span class="tempo"></span>
 
   <script src="../setTimeout-and-interval/script.js"></script>
 </body>
