working on numbers effect

--- a/DOM-EFFECTS/modules/index.html
+++ b/DOM-EFFECTS/modules/index.html
@@ -119,6 +119,29 @@
       </dl>
     </section>
 
+    <section class="grid-section numeros" data-anime="scroll">
+      <h1 class="titulo">Números</h1>
+      <div class="numeros-grid">
+        <div class="numero-animal">
+          <h3>Lobos</h3>
+          <span data-numero>5789</span>
+        </div>
+        <div class="numero-animal">
+          <h3>Raposa</h3>
+          <span data-numero>8289</span>
+        </div>
+        <div class="numero-animal">
+          <h3>Esquilos</h3>
+          <span data-numero>1983</span>
+        </div>
+        <div class="numero-animal">
+          <h3>Ursos</h3>
+          <span data-numero>3983</span>
+        </div>
+      </div>
+
+    </section>
+
     <section class="grid-section contato" data-anime="scroll" id="contato">
       <h1 class="titulo">Contato</h1>
       <div class="mapa" data-tooltip aria-label="Endereço próximo ao estacionamento.">
