--- a/DOM-EFFECTS/modules/index.html
+++ b/DOM-EFFECTS/modules/index.html
@@ -152,6 +152,8 @@
         <li>+55 21 071987733811</li>
         <li>Rua Almirante Barroso - BA </li>
         <li>Salvador - BA</li>
+        <li data-semana="1,2,3,4,5" data-horario="8,18">Seg à Sex das 8h às 18h </li>
+
       </ul>
     </section>
 
