more fetch + API exercises

--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -39,6 +39,11 @@
     <p class="btc"></p>
   </div>
 
+  <div>
+    <p class="jokee"></p>
+    <input type="button" value="Proxima" id="jokeBtn">
+  </div>
+
   <script src="../Fetch/script.js"></script>
 </body>
 
