--- a/Async-and-await/index.html
+++ b/Async-and-await/index.html
@@ -12,7 +12,7 @@
   <script>
     document.documentElement.className += " js"
   </script>
-  <title>Async/Await</title>
+  <title>Api e HTTP</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
     <input type="button" value="Proxima" id="jokeBtn">
   </div>
 
-  <script src="../Async-and-await/script.js"></script>
+  <script src="../Api-and-http/script.js"></script>
 </body>
 
 </html>
