fixing html error

--- a/Async-and-await/index.html
+++ b/Async-and-await/index.html
@@ -12,7 +12,7 @@
   <script>
     document.documentElement.className += " js"
   </script>
-  <title>Api e HTTP</title>
+  <title>Async/Await</title>
 </head>
 
 <body>
