--- a/Async-and-await/index.html
+++ b/Async-and-await/index.html
@@ -16,35 +16,8 @@
 </head>
 
 <body>
-  <style>
-    label {
-      display: block;
-    }
 
-    input {
-      display: block;
-    }
-  </style>
-
-  <form id="buscaCep">
-    <label for="cep">CEP</label>
-    <input type="text" name="cep" id="cep">
-    <input type="button" value="Buscar cep" id="btnCep">
-  </form>
-  <div class="resultadoCep">
-
-  </div>
-  <div>
-    <h2>Preço BTC</h2>
-    <p class="btc"></p>
-  </div>
-
-  <div>
-    <p class="jokee"></p>
-    <input type="button" value="Proxima" id="jokeBtn">
-  </div>
-
-  <script src="../Api-and-http/script.js"></script>
+  <script src="../Async-and-await/script.js"></script>
 </body>
 
 </html>
