--- a/History-api/index.html
+++ b/History-api/index.html
@@ -16,6 +16,15 @@
 </head>
 
 <body>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="sobre.html">Sobre</a></li>
+  </ul>
+
+  <div class="content">
+    <h1>home</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ullam?</p>
+  </div>
 
   <script src="../History-api/script.js"></script>
 </body>
